--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('main.index') }}">AdGest</a>
+        <!--Avatar de cada usuário-->
+        <div class="navbar-brand d-flex align-items-center">
+          <a href="{{ url_for('main.index') }}" class="text-decoration-none text-dark">
+            AdGest
+          </a>
+          {% if current_user.is_authenticated and current_user.profile_image %}
+            <a href="{{ url_for('main.profile') }}" class="ms-2">
+              <img src="{{ url_for('static', filename='icons/' ~ current_user.profile_image) }}"
+                   alt="Avatar" class="img-thumbnail"
+                   style="width: 40px; height: 40px; object-fit: cover; border-radius: 50%;">
+            </a>
+          {% endif %}
+        </div>        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
