--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,5 +14,8 @@
       </div>
     </form>
   </div>
+  <div class="mt-2">
+    <a href="{{ url_for('main.reset_request') }}">Esqueceu sua senha?</a>
+  </div>
 </div>
 {% endblock %}
