--- a/app/templates/upload_client_csv.html
+++ b/app/templates/upload_client_csv.html
@@ -13,4 +13,4 @@
     <button type="submit" class="btn btn-primary">{{ form.submit.label.text }}</button>
   </form>
 </div>
-{% endblock %}
+{% endblock %}a
