--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -105,12 +105,12 @@
                 </li>
               {% endif %}
               {% if current_user.is_authenticated and current_user.profile_image %}
-              <a href="{{ url_for('main.profile') }}" class="ms-2">
-                <img src="{{ url_for('static', filename='icons/' ~ current_user.profile_image) }}"
-                    alt="Avatar" class="img-thumbnail"
-                    style="width: 40px; height: 40px; object-fit: cover; border-radius: 50%;">
-              </a>
-            {% endif %}
+                <a href="{{ url_for('main.profile') }}" class="ms-2">
+                  <img src="{{ current_user.profile_image }}"
+                      alt="Avatar" class="img-thumbnail"
+                      style="width: 40px; height: 40px; object-fit: cover; border-radius: 50%;">
+                </a>
+              {% endif %}
             </div> 
             {% else %}
               <li class="nav-item">
