--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -78,7 +78,7 @@
             </div>
           </form>
           <div class="mt-2 text-center">
-            <a href="{{ url_for('main.reset_request') }}">Esqueceu sua senha?</a>
+            <a href="{{ url_for('main.reset_request') }}" class="btn btn-outline-secondary">Esqueceu a sua senha?</a>
           </div>
         </div>
       </div>
