--- a/app/templates/partilhar_cliente.html
+++ b/app/templates/partilhar_cliente.html
@@ -9,6 +9,6 @@
       {{ form.shared_with(class="form-control") }}
     </div>
     <button type="submit" class="btn btn-primary">{{ form.submit.label.text }}</button>
-    <a href="{{ url_for('main.clientes') }}" class="btn btn-link">Cancelar</a>
+    <a href="{{ url_for('main.clientes') }}" class="btn btn-outline-secondary">Cancelar</a>
   </form>
 {% endblock %}
