--- a/app/templates/prazos_judiciais.html
+++ b/app/templates/prazos_judiciais.html
@@ -13,5 +13,5 @@
   {{ macros.render_field(form.comentarios) }}
   <button type="submit" class="btn btn-primary">{{ form.submit.label.text }}</button>
 </form>
-<p><a href="{{ url_for('main.dashboard') }}" class="btn btn-link">Voltar</a></p>
+<p><a href="{{ url_for('main.dashboard') }}" class="btn btn-outline-secondary">Voltar</a></p>
 {% endblock %}
