--- a/app/templates/create_assunto.html
+++ b/app/templates/create_assunto.html
@@ -41,5 +41,5 @@
       {{ form.submit(class="btn btn-primary") }}
     </div>
   </form>
-  <p><a href="{{ url_for('main.dashboard') }}" class="btn btn-link">Voltar</a></p>
+  <p><a href="{{ url_for('main.dashboard') }}" class="btn btn-outline-secondary">Voltar</a></p>
 {% endblock %}
