--- a/app/templates/create_tarefa.html
+++ b/app/templates/create_tarefa.html
@@ -12,5 +12,5 @@
   {{ macros.render_field(form.horas) }}
   <button type="submit" class="btn btn-primary">{{ form.submit.label.text }}</button>
 </form>
-<p><a href="{{ url_for('main.dashboard') }}" class="btn btn-link">Voltar</a></p>
+<p><a href="{{ url_for('main.dashboard') }}" class="btn btn-outline-secondary">Voltar</a></p>
 {% endblock %}
